[package]
name = "particle_swarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastrand = "2"

# Uncomment for profiling with cargo-flamegraph
#[profile.release]
#debug = true